--- a/mandelbulber2/formula/ui/transf_difs_helix_v2.ui
+++ b/mandelbulber2/formula/ui/transf_difs_helix_v2.ui
@@ -37,10 +37,48 @@
      <property name="spacing">
       <number>2</number>
      </property>
+     <item row="1" column="1">
+      <widget class="MyDoubleSpinBox" name="spinbox_transf_radius_1">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="prefix">
+        <string/>
+       </property>
+       <property name="suffix">
+        <string/>
+       </property>
+       <property name="decimals">
+        <number>6</number>
+       </property>
+       <property name="minimum">
+        <double>-99.998999999999995</double>
+       </property>
+       <property name="maximum">
+        <double>99.998999999999995</double>
+       </property>
+       <property name="singleStep">
+        <double>0.100000000000000</double>
+       </property>
+       <property name="value">
+        <double>1.000000000000000</double>
+       </property>
+      </widget>
+     </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label_38">
        <property name="text">
         <string notr="true">scale:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_46">
+       <property name="text">
+        <string notr="true">radius:</string>
        </property>
       </widget>
      </item>
@@ -75,8 +113,8 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
-      <widget class="MyDoubleSpinBox" name="spinbox_transf_radius_1">
+     <item row="2" column="1">
+      <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleC_0">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -106,10 +144,10 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_46">
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_49">
        <property name="text">
-        <string notr="true">radius:</string>
+        <string notr="true">taper:</string>
        </property>
       </widget>
      </item>
@@ -626,7 +664,7 @@
      <property name="title">
       <string>Custom DE</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_6" stretch="0,0,0,0,0,0,0,0">
+     <layout class="QVBoxLayout" name="verticalLayout_6" stretch="0,0,0,0,0,0,0">
       <property name="spacing">
        <number>2</number>
       </property>
@@ -764,13 +802,6 @@
        </layout>
       </item>
       <item>
-       <widget class="MyCheckBox" name="checkBox_transf_function_enabledB_false">
-        <property name="text">
-         <string>square</string>
-        </property>
-       </widget>
-      </item>
-      <item>
        <widget class="MyCheckBox" name="checkBox_transf_function_enabledT_false">
         <property name="text">
          <string>standard modes radius  =&gt; max()</string>
@@ -809,7 +840,35 @@
            <property name="spacing">
             <number>2</number>
            </property>
-           <item row="0" column="1">
+           <item row="3" column="0">
+            <widget class="MyCheckBox" name="checkBox_transf_function_enabledM_false">
+             <property name="text">
+              <string>max abs(zc.z)</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="1">
+            <widget class="MyCheckBox" name="checkBox_transf_function_enabledS_false">
+             <property name="text">
+              <string>max zc .z^2</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_130">
+             <property name="text">
+              <string notr="true">radius  offset:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="MyCheckBox" name="checkBox_transf_function_enabledN_false">
+             <property name="text">
+              <string>sqrt d.z </string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
             <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_0">
              <property name="enabled">
               <bool>true</bool>
@@ -840,38 +899,17 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="MyCheckBox" name="checkBox_transf_function_enabledN_false">
-             <property name="text">
-              <string>sqrt d.z </string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
+           <item row="2" column="1">
             <widget class="MyCheckBox" name="checkBox_transf_function_enabledO_false">
              <property name="text">
               <string>sqrt d.z d.z</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="MyCheckBox" name="checkBox_transf_function_enabledM_false">
-             <property name="text">
-              <string>max abs(zc.z)</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
-            <widget class="MyCheckBox" name="checkBox_transf_function_enabledS_false">
-             <property name="text">
-              <string>max zc .z^2</string>
-             </property>
-            </widget>
-           </item>
            <item row="0" column="0">
-            <widget class="QLabel" name="label_130">
+            <widget class="MyCheckBox" name="checkBox_transf_function_enabledB_false">
              <property name="text">
-              <string notr="true">radius.d.xy offset:</string>
+              <string>radius.d.xy </string>
              </property>
             </widget>
            </item>
@@ -1572,12 +1610,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>40</x>
-     <y>195</y>
+     <x>47</x>
+     <y>223</y>
     </hint>
     <hint type="destinationlabel">
-     <x>222</x>
-     <y>252</y>
+     <x>278</x>
+     <y>280</y>
     </hint>
    </hints>
   </connection>
@@ -1588,12 +1626,28 @@
    <slot>setDisabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>48</x>
-     <y>1213</y>
+     <x>101</x>
+     <y>1188</y>
     </hint>
     <hint type="destinationlabel">
-     <x>136</x>
-     <y>1193</y>
+     <x>189</x>
+     <y>1163</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>groupCheck_transf_function_enabledC_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>checkBox_transf_function_enabledT_false</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>52</x>
+     <y>693</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>139</x>
+     <y>673</y>
     </hint>
    </hints>
   </connection>
